--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Parcial 1</title>
     <link rel="stylesheet" href="public/bootstrap-5.3.5-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <style>
+        #map { height: 300px; }
+    </style>
 </head>
-<body>
+<header id="header" class="bg-primary text-white text-center py-4">
+    <h3>Mi Perfil App</h3>
+</header>
+<body id="body" class="bg-light">
     <div class="container py-5">
         <div class="text-center">
             <h1 class="display-4 mb-4">Bienvenido a Mi Perfil App</h1>
@@ -30,4 +38,16 @@
     </div>
     <script src="public/bootstrap-5.3.5-dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<footer id="footer" class="bg-dark mt-5">
+    <div class="text-center py-4 text-white">
+        <p class="mb-0">© 2025 Mi Perfil App. Todos los derechos reservados.</p>
+        <p class="mb-0">
+            Desarrollado por <a href="https://github.com/Jhosue-cmd" target="_blank">Josue Guayasamin</a>
+        </p>
+        <p class="mb-0">
+            Desarrollado por <a href="https://github.com/alfonso1031" target="_blank">Alfonso Arroyo</a>
+        </p>
+        
+    </div>
+</footer>
 </html>
