--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Parcial 1</title>
     <link rel="stylesheet" href="public/bootstrap-5.3.5-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <style>
-        #map {
-            height: 300px;
-        }
+        #map { height: 400px; }
     </style>
 </head>
 
@@ -23,7 +24,7 @@
     <main id="main">
 
     </main>
-    
+
     <footer id="footer" class="bg-dark mt-5">
         <div class="text-center py-4 text-white">
             <p class="mb-0">© 2025 Mi Perfil App. Todos los derechos reservados.</p>
@@ -38,8 +39,9 @@
     </footer>
 </body>
 
-
 <script src="public/bootstrap-5.3.5-dist/js/bootstrap.min.js"></script>
 <script src="public/js/load.js"></script>
+<script src="public/js/camara.js"></script>
+<script src="./public/js/geolocation.js"></script>
 
 </html>
