--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="public/bootstrap-5.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <style>
-        #map { height: 400px; }
+        #map {
+            height: 400px;
+        }
     </style>
 </head>
 
@@ -43,5 +44,11 @@
 <script src="public/js/load.js"></script>
 <script src="public/js/camara.js"></script>
 <script src="./public/js/geolocation.js"></script>
+<script src="./public/js/guardar_usuario.js"></script>
+<script>
+    fetch('./views/inicio.html')
+    .then(res => res.text())
+    .then(data => document.getElementById('main').innerHTML = data)
+</script>
 
 </html>
