--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main id="main">
-
+        
     </main>
 
     <footer id="footer" class="bg-dark mt-5">
@@ -40,15 +40,11 @@
     </footer>
 </body>
 
-<script src="public/bootstrap-5.3.5-dist/js/bootstrap.min.js"></script>
-<script src="public/js/load.js"></script>
-<script src="public/js/camara.js"></script>
+<script src="./public/bootstrap-5.3.5-dist/js/bootstrap.min.js"></script>
+<script src="./public/js/load.js"></script>
+<script src="./public/js/camara.js"></script>
 <script src="./public/js/geolocation.js"></script>
 <script src="./public/js/guardar_usuario.js"></script>
-<script>
-    fetch('./views/inicio.html')
-    .then(res => res.text())
-    .then(data => document.getElementById('main').innerHTML = data)
-</script>
+
 
 </html>
