--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -44,7 +44,8 @@
 <script src="./public/js/load.js"></script>
 <script src="./public/js/camara.js"></script>
 <script src="./public/js/geolocation.js"></script>
-<script src="./public/js/guardar_usuario.js"></script>
+<script src="./public/js/crear_perfil.js"></script>
+<script src="./public/js/ver_perfil.js"></script>
 
 
 </html>
