--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -30,12 +30,12 @@
         <div class="text-center py-4 text-white">
             <p class="mb-0">© 2025 Mi Perfil App. Todos los derechos reservados.</p>
             <p class="mb-0">
-                Desarrollado por <a href="https://github.com/Jhosue-cmd" target="_blank">Josue Guayasamin</a>
-            </p>
-            <p class="mb-0">
                 Desarrollado por <a href="https://github.com/alfonso1031" target="_blank">Alfonso Arroyo</a>
             </p>
-
+            <a href="https://api.whatsapp.com/send/?phone=%2B593984808346" class="text-light me-3">Whatsapp</a>
+            <p class="mb-0">
+                Desarrollado por <a href="https://github.com/Jhosue-cmd" target="_blank">Josue Guayasamin</a>
+            </p>
         </div>
     </footer>
 </body>
@@ -44,8 +44,8 @@
 <script src="./public/js/load.js"></script>
 <script src="./public/js/camara.js"></script>
 <script src="./public/js/geolocation.js"></script>
-<script src="./public/js/crear_perfil.js"></script>
-<script src="./public/js/ver_perfil.js"></script>
+<script src="./public/js/loadUser.js"></script>
+<script src="./public/js/guardar_usuario.js"></script>
 
 
 </html>
