--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -15,37 +15,37 @@
             height: 400px;
         }
     </style>
+    <style>
+        .gradient-custom {
+            background: #6a11cb;
+            background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+            background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+        }
+    </style>
 </head>
 
-<body>
-    <header id="header" class="bg-primary text-white text-center py-4">
-        <h3>Mi Perfil App</h3>
-    </header>
-
+<body class="vh-100 gradient-custom">
     <main id="main">
-        
     </main>
-
     <footer id="footer" class="bg-dark mt-5">
         <div class="text-center py-4 text-white">
             <p class="mb-0">© 2025 Mi Perfil App. Todos los derechos reservados.</p>
             <p class="mb-0">
-                Desarrollado por <a href="https://github.com/alfonso1031" target="_blank">Alfonso Arroyo</a>
+                Desarrollado por <a href="https://github.com/alfonso1031" class="text-light me-3" target="_blank">Alfonso Arroyo</a>
+                <a href="https://api.whatsapp.com/send/?phone=%2B593984808346" class="text-light me-3">Whatsapp</a>
             </p>
-            <a href="https://api.whatsapp.com/send/?phone=%2B593984808346" class="text-light me-3">Whatsapp</a>
+
             <p class="mb-0">
-                Desarrollado por <a href="https://github.com/Jhosue-cmd" target="_blank">Josue Guayasamin</a>
+                Desarrollado por <a href="https://github.com/Jhosue-cmd" class="text-light me-3" target="_blank">Josue Guayasamin</a>
             </p>
         </div>
     </footer>
 </body>
-
-<script src="./public/bootstrap-5.3.5-dist/js/bootstrap.min.js"></script>
+<script src="public/bootstrap-5.3.5-dist/js/bootstrap.min.js"></script>
+<script src="public/js/login.js"></script>
 <script src="./public/js/load.js"></script>
 <script src="./public/js/camara.js"></script>
 <script src="./public/js/geolocation.js"></script>
 <script src="./public/js/loadUser.js"></script>
 <script src="./public/js/guardar_usuario.js"></script>
-
-
 </html>
