--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -18,8 +18,8 @@
     <style>
         .gradient-custom {
             background: #6a11cb;
-            background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-            background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+            background: -webkit-linear-gradient(to right, rgb(0, 0, 0), rgba(37, 117, 252, 1));
+            background: linear-gradient(to right, rgb(0, 0, 0), rgba(37, 117, 252, 1))
         }
     </style>
 </head>
