--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -22,6 +22,9 @@
             background: linear-gradient(to right, rgb(0, 0, 0), rgba(37, 117, 252, 1))
         }
     </style>
+    <script>
+        window.onload = () => cambiarPagina("./views/registro.html");
+    </script>
 </head>
 
 <body class="vh-100 gradient-custom">
