--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -23,7 +23,7 @@
         }
     </style>
     <script>
-        window.onload = () => cambiarPagina("./views/registro.html");
+        window.onload = () => cambiarPagina("./views/login.html");
     </script>
 </head>
 
