--- a/PRY-Proyecto Parcial 1/dashboard.html
+++ b/PRY-Proyecto Parcial 1/dashboard.html
@@ -77,16 +77,16 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Finanzas</span>
+                    <span>Canciones</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Finanzas:</h6>
-                        <a class="collapse-item" href="">Ingresos</a>
-                        <a class="collapse-item" href="">Gastos</a>
-                        <a class="collapse-item" href="">Ahorros</a>
-                        <a class="collapse-item" href="">Otros</a>
+                        <h6 class="collapse-header">Mis canciones:</h6>
+                        <a class="collapse-item" href="agrergar_musica.html">Ingresar cancion</a>
+                        <a class="collapse-item" href="ver_canciones.html">Ver canciones</a>
+                        <a class="collapse-item" href="editar_musica.html">Editar cancion</a>
+                        <a class="collapse-item" href="eliminar_canciones.html">Eliminar cancion</a>
                     </div>
                 </div>
             </li>
