--- a/PRY-Proyecto Parcial 1/dashboard.html
+++ b/PRY-Proyecto Parcial 1/dashboard.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Admin - Perfil</title>
+    <title>Proyecto Parcial 1</title>
 
     <!-- Custom fonts for this template-->
     <link href="public/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
