--- a/PRY-Proyecto Parcial 1/dashboard.html
+++ b/PRY-Proyecto Parcial 1/dashboard.html
@@ -9,9 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Proyecto Parcial 1</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-    <link href="public/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="public/css/sb-admin-2.css" rel="stylesheet">
     <link rel="stylesheet" href="public/bootstrap-5.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
@@ -30,19 +28,19 @@
         }
     </style>
     <script>
-        window.onload = () => cambiarPagina("./views/principal.html");
+        window.onload = () => cambiarPagina("./views/verPerfil.html");
     </script>
 
 
 </head>
 
-<body id="page-top">
+<body id="page-top" class="vh-100 gradient-custom">
 
     <!-- Page Wrapper -->
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-dark sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
@@ -91,39 +89,37 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Finanzas</span>
+                    <span>Canciones</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Finanzas:</h6>
-                        <a class="collapse-item" href="">Ingresos</a>
-                        <a class="collapse-item" href="">Gastos</a>
-                        <a class="collapse-item" href="">Ahorros</a>
-                        <a class="collapse-item" href="">Otros</a>
+                        <h6 class="collapse-header">Canciones</h6>
+                        <a class="collapse-item" onclick="cambiarPagina('views/agregar_musica.html')">Agregar
+                            cancion</a>
+                        <a class="collapse-item"
+                            onclick="cambiarPagina('views/eliminar_canciones.html')">Eliminar cancion</a>
+                        <a class="collapse-item" onclick="cambiarPagina('views/editar_musica.html')">Editar
+                            cancion</a>
+                        <a class="collapse-item" onclick="cambiarPagina('views/ver_canciones.html')">Ver
+                            cancion</a>
                     </div>
                 </div>
             </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
-
-            <!-- Sidebar Toggler (Sidebar) -->
-            <div class="text-center d-none d-md-inline">
-                <button class="rounded-circle border-0" id="sidebarToggle"></button>
-            </div>
-
         </ul>
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content-wrapper" class="d-flex flex-column gradient-custom">
 
             <!-- Main Content -->
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow">
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -131,7 +127,7 @@
                     </button>
 
                     <!-- Topbar Navbar -->
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto bg-dark">
 
                         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
                         <li class="nav-item dropdown no-arrow d-sm-none">
@@ -163,22 +159,19 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Alfonso y Josue</span>
+                                <span class="mr-2 d-none d-lg-inline text-light small">Alfonso y Josue</span>
                                 <img class="img-profile rounded-circle" src="public/img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="profile.html">
+                                <a class="dropdown-item" onclick="cambiarPagina('./views/verPerfil.html')">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Perfil
                                 </a>
-                                <a class="dropdown-item" href="settings.html">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Configuración
-                                </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" onclick="cambiarPagina('./views/login.html')"
+                                    data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Cerrar Sesión
                                 </a>
@@ -192,7 +185,6 @@
                 <main id="main">
 
                 </main>
-
 
                 <footer id="footer" class="bg-dark mt-5">
                     <div class="text-center py-4 text-white">
@@ -237,7 +229,7 @@
                         sesión actual.</div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                        <a class="btn btn-primary" href="bienvenida.html">Cerrar Sesión</a>
+                        <a class="btn btn-primary" onclick="cambiarPagina('./views/login.html')">Cerrar Sesión</a>
                     </div>
                 </div>
             </div>
@@ -256,6 +248,6 @@
 <script src="public/vendor/jquery/jquery.min.js"></script>
 <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="public/vendor/jquery-easing/jquery.easing.min.js"></script>
-<script src="public/js/sb-admin-2.min.js"></script>
+<script src="public/js/sb-admin-2.js"></script>
 
 </html>
