--- a/PRY-Proyecto Parcial 1/dashboard.html
+++ b/PRY-Proyecto Parcial 1/dashboard.html
@@ -245,6 +245,7 @@
 <script src="./public/js/geolocation.js"></script>
 <script src="./public/js/loadUser.js"></script>
 <script src="./public/js/guardar_usuario.js"></script>
+<script src="public/js/verPerfil.js"></script>
 <script src="public/vendor/jquery/jquery.min.js"></script>
 <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="public/vendor/jquery-easing/jquery.easing.min.js"></script>
