--- a/PRY-Proyecto Parcial 1/index.html
+++ b/PRY-Proyecto Parcial 1/index.html
@@ -23,7 +23,7 @@
         }
     </style>
     <script>
-        window.onload = () => cambiarPagina("./views/login.html");
+        window.onload = () => cambiarPagina("./views/inicio.html");
     </script>
 </head>
 
@@ -32,7 +32,7 @@
     </main>
     <footer id="footer" class="bg-dark mt-5">
         <div class="text-center py-4 text-white">
-            <p class="mb-0">© 2025 Mi Perfil App. Todos los derechos reservados.</p>
+            <p class="mb-0">© 2025 Mi plataforma de gestión  de canciones. Todos los derechos reservados.</p>
             <p class="mb-0">
                 Desarrollado por <a href="https://github.com/alfonso1031" class="text-light me-3" target="_blank">Alfonso Arroyo</a>
                 <a href="https://api.whatsapp.com/send/?phone=%2B593984808346" class="text-light me-3">Whatsapp</a>
