--- a/PRY-Proyecto Parcial 1/dashboard.html
+++ b/PRY-Proyecto Parcial 1/dashboard.html
@@ -45,7 +45,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
 
-                <div class="sidebar-brand-text mx-3">Administrador Personal</div>
+                <div class="sidebar-brand-text mx-3">Administrador de Canciones</div>
             </a>
 
             <!-- Divider -->
@@ -55,7 +55,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
+                    <span>INICIO</span></a>
             </li>
 
             <!-- Divider -->
@@ -63,26 +63,8 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Universidad
+                ESPE
             </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Proyectos por acabar</span>
-                </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Proyectos:</h6>
-                        <a class="collapse-item"
-                            href="https://micampus.espe.edu.ec/mod/assign/view.php?id=342903">Proyecto Web</a>
-                        <a class="collapse-item" href="https://micampus.espe.edu.ec/course/view.php?id=12460">Proyecto
-                            Digital</a>
-                    </div>
-                </div>
-            </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
